02_chat-app/base/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: chat-app
    app.kubernetes.io/component: chat-app
    app.kubernetes.io/instance: chat-app
  name: chat-app
  namespace: chat-app
spec:
  replicas: 8 
  selector:
    matchLabels:
      app.kubernetes.io/component: chat-app
      app.kubernetes.io/instance: chat-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: chat-app
        app.kubernetes.io/instance: chat-app
    spec:
      containers:
      - image: quay.io/jclaret/chatbot:latest
        imagePullPolicy: Always
        name: chat-app
        ports:
        - containerPort: 8001
          protocol: TCP
        resources: {}
      serviceAccountName: default
status: {}
