02_chat-app/base/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/component: chat-app
    app.kubernetes.io/instance: chat-app
  name: chat-app
  namespace: chat-app
spec:
  ports:
  - name: 8001-tcp
    port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app.kubernetes.io/component: chat-app
    app.kubernetes.io/instance: chat-app
status:
  loadBalancer: {}
